<resources>
    <string name="app_name">Hakaton2024</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Add</string>
    <string name="title_profile">Profile</string>
    <string name="title_profileName">Иван</string>
    <string name="title_likes">Кол-во лайков</string>
    <string name="title_comments">Кол-во комментариев</string>
    <string name="title_others">Прочие</string>
    <string name="authors_photo">Фото автора</string>
    <string name="search">Поиск</string>
    <string name="text">Интересные подборки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="create">Создать </string>
    <string name="text1">Название</string>
    <string name="text2">Описание</string>
    <string name="text3">Ссылка</string>


    <string name="edtext1">Введите описание</string>
    <string name="edtext2">Добавьте описание</string>
    <string name="edtext3">Добавьте сюда ссылку</string>


</resources>